--- a/src/components/core/Landing/template.html
+++ b/src/components/core/Landing/template.html
@@ -42,35 +42,10 @@
   <v-container class="mt-4 pv-no-select" grid-list-lg>
     <v-layout row wrap>
       <v-flex xs12>
-        <span class="title">Sample Data1</span>
+        <span class="title">Sample Data</span>
+        <webrtc />
       </v-flex>
-      <v-flex row xs12>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="">
-              <vue-webrtc ref="webrtc" width="100%" :roomId="roomId" v-on:joined-room="logEvent"
-                v-on:left-room="logEvent" v-on:opened-room="logEvent" v-on:share-started="logEvent"
-                v-on:share-stopped="logEvent" @error="onError" />
-            </div>
-            <div class="row">
-              <div class="col-md-12 my-3">
-                <v-btn elevation="2" @click="onJoin">Join</v-btn>
-                <v-btn elevation="2" @click="onLeave">Leave</v-btn>
-                <v-btn elevation="2" @click="onCapture">Capture Photo</v-btn>
-                <v-btn elevation="2" @click="onShareScreen">Share Screen</v-btn>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h2>Captured Image</h2>
-            <figure class="figure">
-              <img :src="img" class="img-responsive" />
-            </figure>
-          </div>
-        </div>
-      </v-flex>
+      
       <v-flex v-for="(sample, i) in samples" :key="i" :xs4="$vuetify.breakpoint.mdAndUp" :xs6="$vuetify.breakpoint.sm"
         :xs12="$vuetify.breakpoint.xs">
         <v-card :class="$style.sampleData" flat tile>
